www/style.css
html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abbr,acronym,address,big,cite,code,del,dfn,em,img,ins,kbd,q,s,samp,small,strike,strong,sub,sup,tt,var,b,u,i,center,dl,dt,dd,ol,ul,li,fieldset,form,label,legend,table,caption,tbody,tfoot,thead,tr,th,td,article,aside,canvas,details,embed,figure,figcaption,footer,header,hgroup,menu,nav,output,ruby,section,summary,time,mark,audio,video{border:0;font-size:100%;font:inherit;vertical-align:baseline;margin:0;padding:0}article,aside,details,figcaption,figure,footer,header,hgroup,menu,nav,section{display:block}body{line-height:1}ol,ul{list-style:none}blockquote,q{quotes:none}blockquote:before,blockquote:after,q:before,q:after{content:none}table{border-collapse:collapse;border-spacing:0}

body {
	font-size: 10px;
	font-family: "orator-std", "Orator Std", "Orator", sans-serif;
	background: black;
}
nav {
	box-sizing: border-box;
	background: #c8b24a;
}

header {
	display: none;
}
p {
	color: #888;
	font-size: 1.6em;
	line-height: 1.6em;
}
nav a {
	font-size: 2.2em;
	text-decoration: none;
	-webkit-transform:scale(1,1.15);
	color: #645925;
}

a {

}
section {
	margin-top: 2em;
}

footer {
	font-size: 9px;
	color: #c8b24a;
	text-transform: uppercase;
	display: none;
}

.page-home footer {
	display: block;
}

footer .loic {
	color: #c8b24a;
	display: inline-block;
	font-size: 13px;
	letter-spacing: -2px;
	-webkit-transform: scale(1,1.4);
	text-decoration: none;
}
.wrapper {
	box-sizing: border-box;
	background: url(/william-wray.jpg);
	background-repeat: no-repeat;
}

.page-content {
	background: black;
	box-sizing: border-box;
	color: #a29b99;
}

.logo {
	background: url(/gamma-wray.png);
	background-repeat: no-repeat;
	background-size: 100%;
}

.home-logo {
	position: absolute;
	pointer-events:none;	
}

@media (min-width: 960px) {
	.wrapper {
		width: 960px;
		margin: 0 auto;
	}
	nav {
		float: left;
		width: 147px;
		padding: 10px;
		min-height: 540px;
		height: 100%;
	}
	nav a {
		display: block;
		width: 100%;
		margin-bottom: 25px;
	}
	nav a.teaser {
		margin-top: 20px;
	}
	nav a.story {
		margin-top: 100px;
	}
	.wrapper {
		background-size: 813px;
		background-position: top right;
		min-height: 540px;
	}
	
	.home-logo {
		width: 960px;
		height: 600px;
		margin-left: -148px;
	}
	
	footer {
		margin-top: 4em;
		position: absolute;
		margin-top: 502px;
		margin-left: 400px;
		-webkit-transform: rotate(2deg);
	}
	section {
		float: left;
		width: 80em;
	}
	.page-logo {
		width: 650px;
		height: 380px;
		margin-top: -120px;
	}
	.page-content {
		width: 490px;
		margin-left: 140px;
		padding: 1em;
	}
}
@media (max-width: 959px) {
	.wrapper {
		width: 100%;
	}
	nav {
		width: 100%;
		padding: 10px;
		height: 4.3em;
		
		text-align: justify;
		-ms-text-justify: distribute-all-lines;
		text-justify: distribute-all-lines;
	}
	nav a {
		display: inline-block;
	}
	
	.stretch {
		width: 100%;
		display: inline-block;
		font-size: 0;
		line-height: 0;
	}
	
	.wrapper {
		background-size: 100%;
		background-position: top center;
		min-height: 540px;
	}
	
	.home-logo {
		width: 100%;
		height: 600px;
		margin-left: -10%;
	}
	
	.page-logo {
		width: 80%;
		height: 50vw;
		margin-top: -20%;
	}
	
	footer {
		text-align: center;
		margin-top: 70%;
	}
	
	.page-content {
		padding: 2em;
	}
	
}

@media (max-width: 400px) {
	body {
		font-size: 8px;
	}
	nav a {
		font-size: 1.9em;
	}
}

